package simpleFactoryPattern.product;

public abstract class DrawUtil {
    public abstract void draw();
    public abstract void erase();
}
